# thoughtspot_tml

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tml.py
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  publish.yml  test.yml
_generate/: __main__.py  _proto_local.py
examples/: README.md  basic_input_output.py  common_attribute_changes.py  dummy.py  tml_in_directory_details.py
examples/Database-Comments-To-TML/: README.md  sync_comments.py
examples/worksheet-namespace-remapping/: README.md  worksheet_remapping.py
examples/worksheet-remapping/: README.md  worksheet_remapping.py
src/thoughtspot_tml/: __init__.py  _compat.py  _scriptability.py  _tml.py  _version.py  _yaml.py  exceptions.py  spotapp.py  tml.py  types.py  utils.py
tests/: _const.py  test_answer.py  test_connection.py  test_exceptions.py  test_liveboard.py  test_pinboard.py  test_saved_answer.py  test_special.py  test_spotapp.py  test_sql_view.py  test_table.py  test_tml.py  test_util.py  test_view.py  test_worksheet.py
tests/data/: BAD_DUMMY.answer.tml  DUMMY.answer.tml  DUMMY.liveboard.tml  DUMMY.pinboard.tml  DUMMY.sql_view.tml  DUMMY.table.tml  DUMMY.view.tml  DUMMY.worksheet.tml  DUMMY.yaml  DUMMY_MODEL.worksheet.tml  SPECIAL_GEOMETRY.worksheet.tml  SPECIAL_TABLE.table.tml  SPECIAL_UNICODE_TABLE.table.tml
