[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtspot_tml"
dynamic = ["version"]
description = "Library for manipulating ThoughtSpot Modeling Language (TML) files"
readme = "README.md"
requires-python = ">=3.7 , < 3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Bryant Howell", email = "bryant.howell@thoughtspot.com"},
    {name = "Bill B", email = "bill.back@thoughtspot.com"},
    {name = "boonhapus", email = "nicholas.cooper@thoughtspot.com"},
]
maintainers = [
    {name = "Bryant Howell", email = "bryant.howell@thoughtspot.com"},
    {name = "boonhapus", email = "nicholas.cooper@thoughtspot.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "PyYAML >= 6.0",
    "betterproto[compiler] >= 2.0.0b5",

    # version specific
    "typing_extensions >= 4.4.0; python_version < '3.8.0'",
    "graphlib_backport; python_version < '3.9.0'",
    "zipp >= 3.11.0; python_version < '3.10.0'"
]

[project.urls]
repository = "https://github.com/thoughtspot/thoughtspot_tml"
bug_tracker = "https://github.com/thoughtspot/thoughtspot_tml/issues"

[project.optional-dependencies]
# cli = [
#     "typer[all]==0.7.0",
#     "click==8.1.3",
# ]
dev = [
    "rich",

    # code quality
    "pre-commit",
    "ruff",
    "mypy",

    # tests
    "nox",
    "ward",
    "coverage[toml]",
]

# eventual plans for a jq-like utility for TML
# [project.scripts]
# tml = "thoughtspot_tml.cli.main:run"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["_generate*"]

[tool.setuptools.dynamic]
version = {attr = "thoughtspot_tml._version.__version__"}

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
strict_equality = true
strict_concatenate = true
exclude = '''
(?x)(
    ^_scriptability.py$  # ignore auto-generated files
)
'''

[tool.ruff]
line-length = 120
src = ["src/thoughtspot_tml"]
exclude = [
    "__pycache__",   # ignore compiled bytecode
    ".venv*",        # ignore virtual environments
    ".nox",          # ignore virtual environments

    # project specific ignores
    "*compat.py",         # ignore compatibles
    "_scriptability.py",  # ignore auto-generated files
]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins: https://pypi.org/project/flake8-builtins/
    "ARG",   # flake8-unused-arguments: https://pypi.org/project/flake8-unused-arguments/
    "B",     # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "C4",    # flake8-comprehensions: https://pypi.org/project/flake8-comprehensions/
    "COM",   # flake8-commas: https://pypi.org/project/flake8-commas/
    "DTZ",   # flake8-datetimez: https://pypi.org/project/flake8-datetimez/
    "E",     # pycodestyle: https://pypi.org/project/pycodestyle/
    "F",     # pyflakes: https://pypi.org/project/pyflakes/
    "FA",    # flake8-future-annotations: https://pypi.org/project/flake8-future-annotations/
    "I",     # isort: https://pypi.org/project/isort/
    "Q",     # flake8-quotes: https://pypi.org/project/flake8-quotes/
    "RUF",   # ruff-specific: https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "T20",   # flake8-print: https://pypi.org/project/flake8-print/
    "TCH",   # flake8-type-checking: https://pypi.org/project/flake8-type-checking/
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
datetime = "dt"
sqlalchemy = "sa"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "cs_tools.datastructures._GlobalModel",
    "cs_tools.datastructures._GlobalSettings",
    "cs_tools.datastructures.ValidatedSQLModel",
    "typer.params.Option",
    "typer.params.Argument",
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
    "sqlmodel.SQLModel",
]

[flake8]
type-checking-pydantic-enabled = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
from-first = true
required-imports = ["from __future__ import annotations"]

[tool.ward]
path = "tests/"

[tool.coverage.run]
branch = true
include = [
    "src/**.py",
]
omit = [
    "src/thoughtspot_tml/_scriptability.py",
    "src/thoughtspot_tml/_compat.py",
    "__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "# pragma: peephole optimzer",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
