[metadata]
name = thoughtspot_tml
version = attr: thoughtspot_tml._version.__version__
description = Library for manipulating ThoughtSpot Markup Language (TML) files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thoughtspot/thoughtspot_tml
author = Bryant Howell
author_email = bryant.howell@thoughtspot.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls =
    Documentation = https://github.com/thoughtspot/thoughtspot_tml#readme
    Bug Tracker = https://github.com/thoughtspot/thoughtspot_tml/issues


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install-requires =
    PyYAML
    oyaml


[options.packages.find]
where = src
