[metadata]
name = thoughtspot_tml
version = 1.0.6
author = Bryant Howell
author_email = bryant.howell@thoughtspot.com
description = Library for manipulating ThoughtSpot Markup Language (TML) files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thoughtspot/thoughtspot_tml
project_urls =
    Bug Tracker = https://github.com/thoughtspot/thoughtspot_tml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML
    oyaml

[options.packages.find]
where = src